--- a/style.css
+++ b/style.css
@@ -1,36 +1,87 @@
 h1 {
-    color: blue;
-    font-family: verdana;
-    font-size: 300%;
-  }
-  p {
-    color: red;
-    font-family: courier;
-    font-size: 160%;
-  }
-  p {
-    border: 3px solid powderblue;
-  }
-  a:link {
-    color: green;
-    background-color: transparent;
-    text-decoration: none;
-  }
-  
-  a:visited {
-    color: pink;
-    background-color: transparent;
-    text-decoration: none;
-  }
-  
-  a:hover {
-    color: red;
-    background-color: transparent;
-    text-decoration: underline;
-  }
-  
-  a:active {
-    color: yellow;
-    background-color: transparent;
-    text-decoration: underline;
-  }
+  color: red;
+  font-family: verdana;
+  font-size: 300%;
+  padding-left: 50px;
+}
+p {
+  color: red;
+  font-family: courier;
+  font-size: 160%;
+}
+p {
+  border: 3px solid powderblue;
+}
+a:link {
+  background: aliceblue;
+  padding: 10px 23px;
+  color: green;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:visited {
+  color: pink;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover {
+  color: red;
+  background-color: aqua;
+  text-decoration: underline;
+}
+
+a:active {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: underline;
+}
+.a {
+  margin-bottom: 5px;
+  background-color: #eee;
+  width: 60%;
+  border: 2px solid red;
+  border-left-width: 2px;
+  border-radius: 1px;
+}
+.transparent ,.list-item-transparent {
+  background-color: transparent;
+  background: #121fcf;
+  background: -webkit-linear-gradient(to top, #121fcf 0%, #cf1512 100%);
+}
+.list-item {
+  color: red;
+  background-color: #DDD;
+  margin-bottom: 8px;
+  border-radius: 25x;
+  padding: 16px; 
+}
+.list-item-pattern {
+  background-image: url(./images/tải\ xuống.jpg);
+  background-size: 20%;
+  background-repeat: repeat-x;
+  height: 100px;
+  color:black;
+}
+.list-item-image {
+  background-image: url(./images/a.ico);
+  height: 100px;
+  background-size: cover;
+  background-position: 0 -200px;
+}
+.list-item-parallex {
+  background-image: url(./images/a.ico);
+  height: 100px;
+  background-size: cover;
+  background-position: -200px 0;
+  background-attachment: fixed;
+}
+.block {
+  display: block;
+  margin: 10px;
+}
+.inline {
+  display: inline;
+  margin: 10px;
+}
