--- a/demo2/style.css
+++ b/demo2/style.css
@@ -6,3 +6,116 @@
 html, body {
     font-family: sans-serif;
 }
+#header {
+    width: 100%;
+    height: 80px;
+}
+#header .container {
+    width: 1140px;
+    margin: 0px auto;
+    height: 80px;
+}
+#header .container div.logo {
+    width: 350px;
+    float: left;
+}
+#header .container div.logo a {
+    text-decoration: none;
+    font-size: 30px;
+    font-weight: 800;
+    color:cadetblue;
+    display: block;
+    line-height: 80px;
+}
+#header .container div.contact-info {
+    float: left;
+    width: 790px;
+    height: 80px;
+}
+#header .container div.contact-info ul {
+    padding: 0px;
+    margin: 0px;
+    list-style-type: none;
+}
+#header .container div.contact-info ul li {
+    display: inline-block;
+    list-style-type: none;
+    height: 80px;
+    margin-left: 55px;
+}
+#header .container div.contact-info ul li .contact-icon {
+    float: left;
+    height: 80px;
+    width: 30px;
+    line-height: 80px;
+}
+#header .container div.contact-info ul li div.contact-text{
+    float: left;
+    height: 80px;
+    color: rgba(0,0,0,0.7);
+}
+#header .container div.contact-info ul li div.contact-text label{
+    width: 100%;
+    display: block;
+    font-weight: bold;
+    margin-top: 20px;
+}
+.fa-play-circle {
+    color: #1b9ce3;
+    font-size: 20px;
+}
+#header .container div.contact-info ul li a.register {
+    text-decoration: none;
+    display: flex;
+    color: #FFF;
+    width: 250px;
+    border-radius: 35px;
+    text-align: center;
+    background-color: #1b9ce3;
+    font-size: 16px;
+    height: 40px;
+    float: left;
+    margin-top: 20px;
+    justify-content: center;
+    flex-direction: column;
+}
+#nav {
+    width: 100%;
+    height: 50px;
+    background-color: #0d1128;
+}
+#nav .container {
+    width: 1140px;
+    margin: 0px auto;
+}
+#nav .container ul.menu {
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+    float: left;
+    width: 700px;
+}
+#nav .container ul.menu li {
+    display: inline-block;   
+}
+#nav .container ul.menu li a {
+    text-decoration: none;
+    height: 50px;
+    display: block;
+    line-height: 50px;
+    color: gray;
+    padding-right: 40px;
+}
+#nav .container ul.menu li:first-child a {
+    color:#1b9ce3;
+}
+#nav .form-search {
+    width: 400px;
+    float: right;
+    background: red;
+}
+#nav .form-search .keyword {
+    width: 90%;
+    
+}
+
