--- a/demo2/style.css
+++ b/demo2/style.css
@@ -110,12 +110,45 @@ html, body {
     color:#1b9ce3;
 }
 #nav .form-search {
-    width: 400px;
+    width: 300px;
     float: right;
-    background: red;
+    position: relative;
 }
 #nav .form-search .keyword {
     width: 90%;
-    
+    font-size: 16px;
+    border: 1px solid #999;
+    height: 30px;
+    margin-top: 10px;
+    text-indent: 15px;
+    border-radius: 20px;
+    color: grba(255,255,255,0.7);
+    background-color: transparent;
+}
+#nav .form-search .btn-search {
+    width: 25px;
+    height: 20px;
+    border: none;
+    position: absolute;
+    right: 35px;
+    top: 15px;
+    background: transparent;
+}
+.icon-search {
+    font-size: 20px;
+    color: #999;
+    width: 25px;
+    height: 20px;
+}
+.icon-search:hover {
+    cursor: pointer;
+}
+#banner {
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
+}
+#banner img {
+    width: 100%;
 }
 
