--- a/demo2/style.css
+++ b/demo2/style.css
@@ -147,8 +147,151 @@ html, body {
     width: 100%;
     height: 400px;
     overflow: hidden;
+    position: relative;
 }
 #banner img {
     width: 100%;
+}
+#banner .overlay {
+    background-color: black;
+    display: block;
+    width: 100%;
+    height: 450px;
+    top: 0px;
+    left: 0px;
+    position: absolute;
+    opacity: 0.2;
+}
+#feature {
+    width: 100%;
+}
+#feature .container {
+    width: 1140px;
+    margin: 60px auto;
+    min-height: 300px;
+}
+#feature .container .feature-left, #feature .container .feature-right {
+    float: left;
+}
+#feature .container .feature-left {
+    width: 750px;
+}
+#feature .container .feature-left .card{
+    background: #f0f9fd;
+    float: left;
+    width: 320px;
+    height: 320px;
+    display: block;
+    margin-right: 50px;
+    padding: 20px 30px;
+    margin-bottom: 50px;
+    position: relative;
+}
+#feature .container .feature-left .card .icon{
+    text-align: center;
+}
+#feature .container .feature-left .card .far{
+    color: #1b9ce3;
+    font-size: 50px;
+    margin-top: 20px;
+}
+#feature .container .feature-left .card h2 {
+    text-align: center;
+    margin-top: 10px;
+    color: #233e62;
+    margin-bottom: 25px;   
+}
+#feature .container .feature-left .card p {
+    text-align: center;
+    line-height: 28px;
+    color: gray;
+    font-size: 16px; 
+}
+#feature .container .feature-left .desc{
+    padding: 30px 15px 30px 0px;
+    line-height: 28px;
+    color: gray;
+    font-size: 16px; 
+}
+#feature .container .feature-left .active-card {
+    background: #1b9ce3;
+}
+#feature .container .feature-left .active-card .far, #feature .container .feature-left .active-card h2, #feature .container .feature-left .active-card p {
+    color: #FFF;
+}
+#feature .container .feature-left .card::after {
+    border-style: solid;
+    border-width: 0px 60px 60px 0px;
+    height: 0px;
+    width: 0px;
+    content: '';
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    border-color: transparent #fff transparent transparent;
+}
+h2.feature-title {
+    color: #233e62;
+    font-weight: 700;
+
+}
+#feature .container .feature-right {
+    width: 350px;
+    padding: 15px;
+    border: 5px solid #d1ebf9;
+}
+#feature .container .feature-right img {
+    width: 100%;
+    margin-bottom: 25px;
+}
+#feature .container .feature-right h3 {
+    font-size: 18px;
+    color: #233e62;
+    margin-bottom: 20px;
+}
+#feature .container .feature-right p {
+    color: gray;
+    text-align: center;
+    line-height: 25px;
+}
+#feature .container .feature-right a {
+    display: block;
+    text-decoration: none;
+    width: 120px;
+    height: 40px;
+    border-radius: 18px;
+    background: #1b9ce3;
+    text-align: center;
+    line-height: 40px;
+    color: #FFF;
+    font-size: 15px;
+    margin-top: 10px;
+    margin-left: 100px;
+}
+.guidance {
+    width: 100%;
+    height: 100px;
+    background: url(./home/slide-1.jpg) no-repeat center center;
+    /* center trên dưới trái phải */
+    background-size: cover;
+    position: relative;
+    clear: both;
+    z-index: 0;
+}
+.guidance::after {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+    content: '';
+    z-index: -1;
+    opacity: 0.9;
+    background: linear-gradient(to right, #1566ad 0%, #1b9de3 100%);
+}
+.guidance h2 {
+    text-align: center;
+    color: white;
+    line-height: 100px;
 }
 
